--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,11 @@ classifiers = [
 keywords=["api", "graphql", "protocol", "graphene", "django"]
 
 [tool.poetry.dependencies]
-python = "^3.6 || ^3.7 || ^3.8 || ^3.9"
-django-filter = "^2.2.0"
-djangorestframework = "^no"
+python = "^3.6 || ^3.7 || ^3.8 || ^3.9 || ^3.10"
+django-filter = "^2.4.0"
+djangorestframework = "^3.14.0"
 python-dateutil = "^2.8.0"
-graphene-django = {version = "^3.0.0-beta.7", allow-prereleases = true}
+graphene-django = {version = "^3.0.0", allow-prereleases = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.5"
@@ -53,12 +53,12 @@ black = "^18.3-alpha.0"
 tox = "^3.7"
 factory_boy = "^2.11"
 pytest-django = "^3.4"
-ipdb = "^0.11.0"
+ipdb = "^0.13.9"
 flake8 = "^3.6"
 bandit = "^1.5"
 pytest-cov = "^2.6"
 pyflakes = "^2.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.2.2"]
 build-backend = "poetry.masonry.api"
